Change commit to English

--- a/css/products.css
+++ b/css/products.css
@@ -844,7 +844,7 @@
     background: #7450b3;
 }
 
-/* Loading animation cho modal */
+/* Loading animation for modal */
 .modal-loading {
     position: absolute;
     top: 50%;
